--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "usercss",
   "version": "1.0.0",
-  "description": "",
+  "description": "Personal usercss",
   "license": "Unlicense",
   "private": true,
   "repository": {
