--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
       with:
-        node-version: '14.x'
-    - uses: pnpm/action-setup@v1.2.1
+        node-version: '14'
+    - uses: pnpm/action-setup@v2.0.0
       with:
-        version: '5.x'
+        version: '6'
         run_install: true
     - run: pnpm run test
