--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "stylelint \"**/*.css\""
   },
   "devDependencies": {
-    "stylelint": "^13.12.0",
-    "stylelint-config-standard": "^21.0.0"
+    "postcss-less": "^5.0.0",
+    "stylelint": "^14.1.0",
+    "stylelint-config-standard": "^24.0.0"
   }
 }
