--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
+    - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v2
+      with:
+        version: '7'
+    - uses: actions/setup-node@v3
       with:
         node-version: '16'
-    - uses: pnpm/action-setup@v2.0.0
-      with:
-        version: '6'
-        run_install: true
-    - run: pnpm run test
+        cache: 'pnpm'
+    - run: pnpm install
+    - run: pnpm test
