--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,8 @@ jobs:
     - uses: pnpm/action-setup@v2
       with:
         version: '7'
+        run_install: true
     - uses: actions/setup-node@v3
       with:
         node-version: '16'
-        cache: 'pnpm'
-    - run: pnpm install
     - run: pnpm test
