--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,9 @@ jobs:
     - uses: actions/checkout@v3
     - uses: pnpm/action-setup@v2
       with:
-        version: '7'
+        version: 7
         run_install: true
     - uses: actions/setup-node@v3
       with:
-        node-version: '16'
+        node-version: 18
     - run: pnpm test
